<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stop afstand</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="selecteer_snelheid">Selecteer uw snelheid</string>
    <string name="selecteer_reactietijd">Selecteer uw reactietijd</string>
    <string name="selecteer_wegtype">Selecteer het wegtype:</string>
    <string name="bereken_stopafstand">Bereken de stopafstand</string>
    <string name="stopafstand">De stopafstand is:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="snelheid_waarde">80</string>
    <string name="reactietijd_waarde">1</string>

</resources>
